<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Essential Launcher</string>
    <string name="chooseWidget">Choose widget…</string>
    <string name="hidden">Hidden</string>
    <string name="icon">Icon</string>
    <string name="layoutWidget">Layout widget…</string>
    <string name="openDrawer">Show all apps</string>
    <string name="pinApp">Pin app…</string>
    <string name="removeWidget">Remove widget</string>
    <string name="search">Search</string>
    <string name="showAllDockIcons">Show all dock icons</string>
    <string name="showAppInfo">Show app info</string>
    <string name="showAsGrid">Show as grid</string>
    <string name="showHiddenApps">Show hidden</string>
    <string name="unpinnedDockItem">Unpinned dock item</string>
    <string name="up">^</string>
    <string name="widgetLayoutBottomHalf">Bottom 1/2</string>
    <string name="widgetLayoutBottomQuarter">Bottom 1/4</string>
    <string name="widgetLayoutBottomThird">Bottom 1/3</string>
    <string name="widgetLayoutCenter">Center 1/2</string>
    <string name="widgetLayoutFull">Full Screen</string>
    <string name="widgetLayoutTopHalf">Top 1/2</string>
    <string name="widgetLayoutTopQuarter">Top 1/4</string>
    <string name="widgetLayoutTopThird">Top 1/3</string>
</resources>
