<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_search"
        android:id="@+id/app_bar_search"
        android:title="@string/search"
        android:showAsAction="collapseActionView|always"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/abm_choose_widget"
        android:title="@string/chooseWidget"/>
    <item
        android:id="@+id/abm_layout_widget"
        android:title="@string/layoutWidget"/>
    <item
        android:id="@+id/abm_remove_widget"
        android:title="@string/removeWidget"/>
    <item
        android:id="@+id/abm_grid_toggle"
        android:title="@string/showAsGrid"
        android:checkable="true"/>
    <item
        android:id="@+id/abm_show_all_dock_icons"
        android:title="@string/showAllDockIcons"
        android:checkable="true"/>
    <item
        android:id="@+id/abm_show_hidden"
        android:title="@string/showHiddenApps"
        android:checkable="true"/>
</menu>
